This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ Ticket #3548: Add British English translation
* Updated VirtualDub to v1.10.4-test12
* Updated Unrar to v5.0.0.12
! Ticket #1478, Slightly improve the precision of the frame number in the Go To dialog.
  The frame number was sometimes off by 1. This was easily noticeable when doing frame-stepping
! Ticket #3530, Internal LAV Splitter: the advanced subtitle selection modes were ignored
! Ticket #3523/#3533/#3551, Improve the stability of MPC-HC on buggy systems
! Ticket #3564, If "Keep history of recently opened file" option was enabled, MPC-HC crashed
  when opening very long URLs