@@ -15,6 +15,8 @@ next version - not released yet
 * Updated Unrar to v5.0.0.12
 ! Ticket #1478, Slightly improve the precision of the frame number in the Go To dialog.
   The frame number was sometimes off by 1. This was easily noticeable when doing frame-stepping
+! Ticket #1555, Use elapsed/remaining time for the chapter change OSD depending on what is selected
+  for the time display. Also prevent the OSD from blinking when changing the chapter
 ! Ticket #3530, Internal LAV Splitter: the advanced subtitle selection modes were ignored
 ! Ticket #3523/#3533/#3551, Improve the stability of MPC-HC on buggy systems
 ! Ticket #3564, If "Keep history of recently opened file" option was enabled, MPC-HC crashed
